# otus_c_plus_project

./: .gitignore
.github/workflows/: static_project.yml
project/: CMakeLists.txt  CMakePresets.json  Doxyfile  functions.cmake  main.cpp  version.h.in
project/src/db/: AuthInfo.hpp  AuthManager.cpp  AuthManager.hpp  ConcurrentQueue.hpp  DBStore.cpp  DBStore.hpp  DataComparator.cpp  DataComparator.hpp  IdGenerator.cpp  IdGenerator.hpp  Job.cpp  Job.hpp  NoSQLDB.cpp  NoSQLDB.hpp  Session.cpp  Session.hpp  SessionManager.cpp  SessionManager.hpp  Transaction.cpp  Transaction.hpp  TransactionManager.cpp  TransactionManager.hpp  Utils.hpp
project/src/model/: BasicDBInputObject.hpp  BasicDBObject.hpp  ComplexDBObject.cpp  ComplexDBObject.hpp  Datatype.hpp
project/test/: CMakeLists.txt
project/tests/: AuthManagerTest.cpp  AuthTest.cpp  BasicDBDeleteObjectTest.cpp  BasicDBInsertObjectTest.cpp  BasicDBObjectTest.cpp  BasicDBSelectObjectTest.cpp  BasicDBUpdateObjectTest.cpp  CMakeLists.txt  CommitJobTest.cpp  ComplexDBObjectTest.cpp  DBStoreTest.cpp  DataComparatorTest.cpp  DeleteJobTest.cpp  IdGeneratorTest.cpp  InsertJobTest.cpp  NoSQLTest.cpp  SelectJobTest.cpp  SessionManagerTest.cpp  SessionTest.cpp  TransactionManagerTest.cpp  TransactionTest.cpp  UpdateJobTest.cpp  Utils.cpp  Utils.hpp
